core/argocd/ksops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: age-key
          secret:
            secretName: argocd-age-key
            defaultMode: 420
            items:
              - key: age-key
                path: key.txt
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /usr/local/bin/ksops
              name: custom-tools
              subPath: ksops
            - name: age-key
              mountPath: /.config/sops/age/key.txt
              subPath: key.txt
